# rusks

./: .gitignore  Cargo.toml  PKGBUILD  README.md
src/: algorithms.rs  error.rs  fs.rs  help.rs  main.rs  prompt.rs  storage.rs  task.rs
src/cmd/: edit.rs  mod.rs
src/cmd/creation/: add.rs  edit.rs  list.rs  mod.rs  new.rs  remove.rs
src/cmd/execution/: add.rs  edit.rs  list.rs  mod.rs  new.rs  remove.rs  repository.rs  status.rs
