[package]
name = "rusks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.6"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sled = "0.34.7"
thiserror = "1.0.61"
